--- a/code/.project
+++ b/code/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>code-example</name>
+	<name>java-programming-training</name>
 	<comment></comment>
 	<projects>
 	</projects>
